# rp-pico-explorer

./: Cargo.toml  Embed.toml
.cargo/: config.toml
src/: board.rs  main.rs
